# Boa

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  README.md  criticality.coeffs  deviations.md
.github/workflows/: release.yml
docs/: ENGINEERING_MARVEL_AUDIT.md  EXPERIMENTS.md  TOP_ENGINE_SYNTHESIS.md
src/: board.rs  config.rs  criticality.rs  diagnostics.rs  eval.rs  lib.rs  main.rs  movegen.rs  search.rs  syzygy.rs  tt.rs  types.rs  uci.rs
src/board/: castling.rs  fen_helpers.rs  impls.rs  mod.rs  state.rs  zobrist.rs
src/config/: defaults.rs  mod.rs  options.rs  scale.rs  setters.rs  tests.rs
src/criticality/: logger.rs  mod.rs  record.rs  sampling.rs  tests.rs
src/diagnostics/: mod.rs  pawn_breaks.rs  redeployment.rs  restriction.rs  tests.rs
src/eval/: constants.rs  king.rs  material.rs  mobility.rs  mobility_tables.rs  mod.rs  pawns.rs  pst.rs  (+2 more)
tools/: AGENT_GUIDE.md  CRITICALITY_GUIDE.md  README.md  ablation.py  absurd_analyzer.py  analyze_probes.py  analyze_restriction_signal.py  build_criticality_threshold_sweep.mjs  collect_criticality_epd.py  criticality_dataset.mjs  criticality_parquet_wrapper.sh  criticality_to_parquet.py  extract_criticality_labels.py  extract_training_data.py  game_analyzer.py  openings.epd  patch_rust_const.py  player_style_probe.mjs  probe_health.py  restriction_signal.mjs  run_sts_ffp_compare.py  self_play_dataset.mjs  selfplay.py  selfplay_ablation.py  sprt_test.py  test_quick.pgn  texel_tune.py  texel_tune_internal.py  texel_tune_pst.py  texel_tuner.py  train.py  train_criticality.py  tune_correction.py
(+103 files in other folders)
