[package]
name = "boa"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boa"
path = "src/main.rs"

[features]
probes = ["serde", "serde_json"]

[dependencies]
shakmaty = "0.30.1"
shakmaty-syzygy = "0.28.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
